trying to fix overflow

--- a/style.css
+++ b/style.css
@@ -47,6 +47,9 @@
   	display: block;
   	margin-left: 10.5em;
   }
+  #header {
+    overflow: hidden;
+  }
   #footer {
   	color: gray;
   	font-style:italic;
@@ -55,7 +58,7 @@
   	display: block;
   	padding-top: 3em;
     overflow: hidden;
-    margin-left: 12em;
+    margin-left: 12.5em;
   }
   #Generate {
   	float: left;
